--- a/Section5_CellCommunicatioPrediction/README
+++ b/Section5_CellCommunicatioPrediction/README
@@ -1,1 +1,3 @@
-
+Cell Communication Prediction
+==========================================================================
+To investigate the cell communication, we used CellChat to predict the cellular and molecular interaction in datasets. The comparison between disease groups reveals the signaling that potentially involves in macrophage differentiation.
