--- a/Section5_CellCommunicatioPrediction/README
+++ b/Section5_CellCommunicatioPrediction/README
@@ -1,4 +1,4 @@
 Cell Communication Prediction
 ==========================================================================
 To investigate the cell communication, we used CellChat to predict the cellular and molecular interaction in datasets.
-The comparison between disease groups reveals the signaling that potentially involves in macrophage differentiation.
+The comparison between control and disease group reveals the signaling that potentially involves in macrophage differentiation.
