--- a/Section6_GeneExpressionCorrelation/README
+++ b/Section6_GeneExpressionCorrelation/README
@@ -1,1 +1,3 @@
-
+Gene Expression Correlation
+==========================================================================
+To evaluate the regulatory relationship between genes in the lung microenvironment, we calculated the Pearson correlation between gene markers and interested genes in our findings.
