--- a/Section8_TGFB1high_monocyte/README
+++ b/Section8_TGFB1high_monocyte/README
@@ -1,1 +1,4 @@
-
+TGFB1 high expression monocyte 
+=========================================================================
+To identfy the GAS6-receiving monocyte population, we utilized TGFB1, which is induced by GAS6 treatment in previous fibrosis-related research, as the important gene indicator of these monocytes.
+GSE171524, GSE155249 and GSE149878 were utilized in this section.
