--- a/Section10_GeneSetEnrichmentAnalysis/README
+++ b/Section10_GeneSetEnrichmentAnalysis/README
@@ -1,1 +1,3 @@
-
+Gene Set Enrichment Analysis
+=========================================================================
+In oreder to evaluate the cellular behavior in specific condition, we conducted gene set enrichment analysis (GSEA) in datasets.
